k8s/spark/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spark
